exports[`invalid(1): b a { color: red; } a { color: blue; } 1`] = `

  1 | b a { color: red; } a { color: blue; }

`;

exports[`invalid(1): b a { color: red; } a { color: blue; } 2`] = `

Message:
> 1 | b a { color: red; } a { color: blue; }
    |                     ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`color\`.

`;

exports[`invalid(10): b a { \\63 olor: red; } a { color: blue; } 1`] = `

  1 | b a { \\63 olor: red; } a { color: blue; }

`;

exports[`invalid(10): b a { \\63 olor: red; } a { color: blue; } 2`] = `

Message:
> 1 | b a { \\63 olor: red; } a { color: blue; }
    |                        ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`color\`.

`;

exports[`invalid(11): b a { --theme: red; } a { --theme: blue; } 1`] = `

  1 | b a { --theme: red; } a { --theme: blue; }

`;

exports[`invalid(11): b a { --theme: red; } a { --theme: blue; } 2`] = `

Message:
> 1 | b a { --theme: red; } a { --theme: blue; }
    |                       ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`--theme\`.

`;

exports[`invalid(12): b a { -webkit-appearance: none; } a { -WEBKIT-APPEARANCE: auto; } 1`] = `

  1 | b a { -webkit-appearance: none; } a { -WEBKIT-APPEARANCE: auto; }

`;

exports[`invalid(12): b a { -webkit-appearance: none; } a { -WEBKIT-APPEARANCE: auto; } 2`] = `

Message:
> 1 | b a { -webkit-appearance: none; } a { -WEBKIT-APPEARANCE: auto; }
    |                                   ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`-webkit-appearance\`.

`;

exports[`invalid(13): b a.\\66 oo { color: red; } a.foo { color: blue; } 1`] = `

  1 | b a.\\66 oo { color: red; } a.foo { color: blue; }

`;

exports[`invalid(13): b a.\\66 oo { color: red; } a.foo { color: blue; } 2`] = `

Message:
> 1 | b a.\\66 oo { color: red; } a.foo { color: blue; }
    |                            ^^^^^ Expected selector \`a.foo\` to come before \`b a.\\66 oo\` on line 1 because both set \`color\`.

`;

exports[`invalid(14): b a#\\66 oo { color: red; } a#foo { color: blue; } 1`] = `

  1 | b a#\\66 oo { color: red; } a#foo { color: blue; }

`;

exports[`invalid(14): b a#\\66 oo { color: red; } a#foo { color: blue; } 2`] = `

Message:
> 1 | b a#\\66 oo { color: red; } a#foo { color: blue; }
    |                            ^^^^^ Expected selector \`a#foo\` to come before \`b a#\\66 oo\` on line 1 because both set \`color\`.

`;

exports[`invalid(15): b a[foo\\|bar] { color: red; } a[foo\\|bar] { color: blue; } 1`] = `

  1 | b a[foo\\|bar] { color: red; } a[foo\\|bar] { color: blue; }

`;

exports[`invalid(15): b a[foo\\|bar] { color: red; } a[foo\\|bar] { color: blue; } 2`] = `

Message:
> 1 | b a[foo\\|bar] { color: red; } a[foo\\|bar] { color: blue; }
    |                               ^^^^^^^^^^^ Expected selector \`a[foo\\|bar]\` to come before \`b a[foo\\|bar]\` on line 1 because both set \`color\`.

`;

exports[`invalid(16): b foo\\|a { color: red; } foo\\|a { color: blue; } 1`] = `

  1 | b foo\\|a { color: red; } foo\\|a { color: blue; }

`;

exports[`invalid(16): b foo\\|a { color: red; } foo\\|a { color: blue; } 2`] = `

Message:
> 1 | b foo\\|a { color: red; } foo\\|a { color: blue; }
    |                          ^^^^^^ Expected selector \`foo\\|a\` to come before \`b foo\\|a\` on line 1 because both set \`color\`.

`;

exports[`invalid(17): b \\61 { color: red; } a { color: blue; } 1`] = `

  1 | b \\61 { color: red; } a { color: blue; }

`;

exports[`invalid(17): b \\61 { color: red; } a { color: blue; } 2`] = `

Message:
> 1 | b \\61 { color: red; } a { color: blue; }
    |                       ^ Expected selector \`a\` to come before \`b \\61 \` on line 1 because both set \`color\`.

`;

exports[`invalid(18): b a.foo.bar { color: red; } a.bar.foo { color: blue; } 1`] = `

  1 | b a.foo.bar { color: red; } a.bar.foo { color: blue; }

`;

exports[`invalid(18): b a.foo.bar { color: red; } a.bar.foo { color: blue; } 2`] = `

Message:
> 1 | b a.foo.bar { color: red; } a.bar.foo { color: blue; }
    |                             ^^^^^^^^^ Expected selector \`a.bar.foo\` to come before \`b a.foo.bar\` on line 1 because both set \`color\`.

`;

exports[`invalid(19): b a.é.é { color: red; } a.é.é { color: blue; } 1`] = `

  1 | b a.é.é { color: red; } a.é.é { color: blue; }

`;

exports[`invalid(19): b a.é.é { color: red; } a.é.é { color: blue; } 2`] = `

Message:
> 1 | b a.é.é { color: red; } a.é.é { color: blue; }
    |                          ^^^^^^ Expected selector \`a.é.é\` to come before \`b a.é.é\` on line 1 because both set \`color\`.

`;

exports[`invalid(2): a:hover { color: red; } a { color: blue; } 1`] = `

  1 | a:hover { color: red; } a { color: blue; }

`;

exports[`invalid(2): a:hover { color: red; } a { color: blue; } 2`] = `

Message:
> 1 | a:hover { color: red; } a { color: blue; }
    |                         ^ Expected selector \`a\` to come before \`a:hover\` on line 1 because both set \`color\`.

`;

exports[`invalid(20): b a.foo.foo { color: red; } a.foo { color: blue; } 1`] = `

  1 | b a.foo.foo { color: red; } a.foo { color: blue; }

`;

exports[`invalid(20): b a.foo.foo { color: red; } a.foo { color: blue; } 2`] = `

Message:
> 1 | b a.foo.foo { color: red; } a.foo { color: blue; }
    |                             ^^^^^ Expected selector \`a.foo\` to come before \`b a.foo.foo\` on line 1 because both set \`color\`.

`;

exports[`invalid(21): b a.foo.bar::before { color: red; } a.bar.foo::before { color: blue; } 1`] = `

  1 | b a.foo.bar::before { color: red; } a.bar.foo::before { color: blue; }

`;

exports[`invalid(21): b a.foo.bar::before { color: red; } a.bar.foo::before { color: blue; } 2`] = `

Message:
> 1 | b a.foo.bar::before { color: red; } a.bar.foo::before { color: blue; }
    |                                     ^^^^^^^^^^^^^^^^^ Expected selector \`a.bar.foo::before\` to come before \`b a.foo.bar::before\` on line 1 because both set \`color\`.

`;

exports[`invalid(22): b #dialog.a { &.c { color: red; } } #dialog.a.c { color: blue; } 1`] = `

  1 | b #dialog.a { &.c { color: red; } } #dialog.a.c { color: blue; }

`;

exports[`invalid(22): b #dialog.a { &.c { color: red; } } #dialog.a.c { color: blue; } 2`] = `

Message:
> 1 | b #dialog.a { &.c { color: red; } } #dialog.a.c { color: blue; }
    |                                     ^^^^^^^^^^^ Expected selector \`#dialog.a.c\` to come before \`b #dialog.a.c\` on line 1 because both set \`color\`.

`;

exports[`invalid(23): @scope (.root) { b .card { &.active { color: red; } } .card.active { color: blue; } } 1`] = `

  1 | @scope (.root) { b .card { &.active { color: red; } } .card.active { color: blue; } }

`;

exports[`invalid(23): @scope (.root) { b .card { &.active { color: red; } } .card.active { color: blue; } } 2`] = `

Message:
> 1 | @scope (.root) { b .card { &.active { color: red; } } .card.active { color: blue; } }
    |                                                       ^^^^^^^^^^^^ Expected selector \`.card.active\` to come before \`b .card.active\` on line 1 because both set \`color\`.

`;

exports[`invalid(24): b a::MARKER { color: red; } a::marker { color: blue; } 1`] = `

  1 | b a::MARKER { color: red; } a::marker { color: blue; }

`;

exports[`invalid(24): b a::MARKER { color: red; } a::marker { color: blue; } 2`] = `

Message:
> 1 | b a::MARKER { color: red; } a::marker { color: blue; }
    |                             ^^^^^^^^^ Expected selector \`a::marker\` to come before \`b a::MARKER\` on line 1 because both set \`color\`.

`;

exports[`invalid(25): b a::\\6d arker { color: red; } a::marker { color: blue; } 1`] = `

  1 | b a::\\6d arker { color: red; } a::marker { color: blue; }

`;

exports[`invalid(25): b a::\\6d arker { color: red; } a::marker { color: blue; } 2`] = `

Message:
> 1 | b a::\\6d arker { color: red; } a::marker { color: blue; }
    |                                ^^^^^^^^^ Expected selector \`a::marker\` to come before \`b a::\\6d arker\` on line 1 because both set \`color\`.

`;

exports[`invalid(26): b a::SLOTTED(.foo) { color: red; } a::slotted(.foo) { color: blue; } 1`] = `

  1 | b a::SLOTTED(.foo) { color: red; } a::slotted(.foo) { color: blue; }

`;

exports[`invalid(26): b a::SLOTTED(.foo) { color: red; } a::slotted(.foo) { color: blue; } 2`] = `

Message:
> 1 | b a::SLOTTED(.foo) { color: red; } a::slotted(.foo) { color: blue; }
    |                                    ^^^^^^^^^^^^^^^^ Expected selector \`a::slotted(.foo)\` to come before \`b a::SLOTTED(.foo)\` on line 1 because both set \`color\`.

`;

exports[`invalid(27): b a { color: red; background: white; } a { color: blue; background: black; } 1`] = `

  1 | b a { color: red; background: white; } a { color: blue; background: black; }

`;

exports[`invalid(27): b a { color: red; background: white; } a { color: blue; background: black; } 2`] = `

Message:
> 1 | b a { color: red; background: white; } a { color: blue; background: black; }
    |                                        ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`color\`.

`;

exports[`invalid(28): b a, b button { color: red; } a, button { color: blue; } 1`] = `

  1 | b a, b button { color: red; } a, button { color: blue; }

`;

exports[`invalid(28): b a, b button { color: red; } a, button { color: blue; } 2`] = `

Message:
> 1 | b a, b button { color: red; } a, button { color: blue; }
    |                               ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`color\`.

`;

exports[`invalid(28): b a, b button { color: red; } a, button { color: blue; } 3`] = `

Message:
> 1 | b a, b button { color: red; } a, button { color: blue; }
    |                                  ^^^^^^ Expected selector \`button\` to come before \`b button\` on line 1 because both set \`color\`.

`;

exports[`invalid(29): b .foo { color: red; } #other::before, .foo { color: blue; } 1`] = `

  1 | b .foo { color: red; } #other::before, .foo { color: blue; }

`;

exports[`invalid(29): b .foo { color: red; } #other::before, .foo { color: blue; } 2`] = `

Message:
> 1 | b .foo { color: red; } #other::before, .foo { color: blue; }
    |                                        ^^^^ Expected selector \`.foo\` to come before \`b .foo\` on line 1 because both set \`color\`.

`;

exports[`invalid(3): #x a:hover { color: red; } a:not(:hover), a { color: blue; } 1`] = `

  1 | #x a:hover { color: red; } a:not(:hover), a { color: blue; }

`;

exports[`invalid(3): #x a:hover { color: red; } a:not(:hover), a { color: blue; } 2`] = `

Message:
> 1 | #x a:hover { color: red; } a:not(:hover), a { color: blue; }
    |                                           ^ Expected selector \`a\` to come before \`#x a:hover\` on line 1 because both set \`color\`.

`;

exports[`invalid(30): b a { color: red; } #dialog a, a { color: green; } a { color: blue; } 1`] = `

  1 | b a { color: red; } #dialog a, a { color: green; } a { color: blue; }

`;

exports[`invalid(30): b a { color: red; } #dialog a, a { color: green; } a { color: blue; } 2`] = `

Message:
> 1 | b a { color: red; } #dialog a, a { color: green; } a { color: blue; }
    |                                ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`color\`.

`;

exports[`invalid(30): b a { color: red; } #dialog a, a { color: green; } a { color: blue; } 3`] = `

Message:
> 1 | b a { color: red; } #dialog a, a { color: green; } a { color: blue; }
    |                                                    ^ Expected selector \`a\` to come before \`#dialog a\` on line 1 because both set \`color\`.

`;

exports[`invalid(31): #dialog a, a { color: red; & { color: green; } color: blue; } 1`] = `

  1 | #dialog a, a { color: red; & { color: green; } color: blue; }

`;

exports[`invalid(31): #dialog a, a { color: red; & { color: green; } color: blue; } 2`] = `

Message:
> 1 | #dialog a, a { color: red; & { color: green; } color: blue; }
    |            ^ Expected selector \`a\` to come before \`:is(#dialog a, a)\` on line 1 because both set \`color\`.

`;

exports[`invalid(32): a:is(#dialog) { color: red; } a { color: blue; } 1`] = `

  1 | a:is(#dialog) { color: red; } a { color: blue; }

`;

exports[`invalid(32): a:is(#dialog) { color: red; } a { color: blue; } 2`] = `

Message:
> 1 | a:is(#dialog) { color: red; } a { color: blue; }
    |                               ^ Expected selector \`a\` to come before \`a:is(#dialog)\` on line 1 because both set \`color\`.

`;

exports[`invalid(33): a:matches(#dialog) { color: red; } a { color: blue; } 1`] = `

  1 | a:matches(#dialog) { color: red; } a { color: blue; }

`;

exports[`invalid(33): a:matches(#dialog) { color: red; } a { color: blue; } 2`] = `

Message:
> 1 | a:matches(#dialog) { color: red; } a { color: blue; }
    |                                    ^ Expected selector \`a\` to come before \`a:matches(#dialog)\` on line 1 because both set \`color\`.

`;

exports[`invalid(34): b a:is(::before, *) { color: red; } a { color: blue; } 1`] = `

  1 | b a:is(::before, *) { color: red; } a { color: blue; }

`;

exports[`invalid(34): b a:is(::before, *) { color: red; } a { color: blue; } 2`] = `

Message:
> 1 | b a:is(::before, *) { color: red; } a { color: blue; }
    |                                     ^ Expected selector \`a\` to come before \`b a:is(::before,*)\` on line 1 because both set \`color\`.

`;

exports[`invalid(35): b a:is(:unknown, *) { color: red; } a { color: blue; } 1`] = `

  1 | b a:is(:unknown, *) { color: red; } a { color: blue; }

`;

exports[`invalid(35): b a:is(:unknown, *) { color: red; } a { color: blue; } 2`] = `

Message:
> 1 | b a:is(:unknown, *) { color: red; } a { color: blue; }
    |                                     ^ Expected selector \`a\` to come before \`b a:is(:unknown,*)\` on line 1 because both set \`color\`.

`;

exports[`invalid(36): a:not(#dialog) { color: red; } a { color: blue; } 1`] = `

  1 | a:not(#dialog) { color: red; } a { color: blue; }

`;

exports[`invalid(36): a:not(#dialog) { color: red; } a { color: blue; } 2`] = `

Message:
> 1 | a:not(#dialog) { color: red; } a { color: blue; }
    |                                ^ Expected selector \`a\` to come before \`a:not(#dialog)\` on line 1 because both set \`color\`.

`;

exports[`invalid(37): a:has(#dialog) { color: red; } a { color: blue; } 1`] = `

  1 | a:has(#dialog) { color: red; } a { color: blue; }

`;

exports[`invalid(37): a:has(#dialog) { color: red; } a { color: blue; } 2`] = `

Message:
> 1 | a:has(#dialog) { color: red; } a { color: blue; }
    |                                ^ Expected selector \`a\` to come before \`a:has(#dialog)\` on line 1 because both set \`color\`.

`;

exports[`invalid(38): a:has(> #dialog) { color: red; } a { color: blue; } 1`] = `

  1 | a:has(> #dialog) { color: red; } a { color: blue; }

`;

exports[`invalid(38): a:has(> #dialog) { color: red; } a { color: blue; } 2`] = `

Message:
> 1 | a:has(> #dialog) { color: red; } a { color: blue; }
    |                                  ^ Expected selector \`a\` to come before \`a:has(>#dialog)\` on line 1 because both set \`color\`.

`;

exports[`invalid(39): a:nth-child(2n of #dialog) { color: red; } a { color: blue; } 1`] = `

  1 | a:nth-child(2n of #dialog) { color: red; } a { color: blue; }

`;

exports[`invalid(39): a:nth-child(2n of #dialog) { color: red; } a { color: blue; } 2`] = `

Message:
> 1 | a:nth-child(2n of #dialog) { color: red; } a { color: blue; }
    |                                            ^ Expected selector \`a\` to come before \`a:nth-child(2n of#dialog)\` on line 1 because both set \`color\`.

`;

exports[`invalid(4): b a::before { color: red; } a::before { color: blue; } 1`] = `

  1 | b a::before { color: red; } a::before { color: blue; }

`;

exports[`invalid(4): b a::before { color: red; } a::before { color: blue; } 2`] = `

Message:
> 1 | b a::before { color: red; } a::before { color: blue; }
    |                             ^^^^^^^^^ Expected selector \`a::before\` to come before \`b a::before\` on line 1 because both set \`color\`.

`;

exports[`invalid(40): b a { /* keep */ color: red; }\na { color: blue; } 1`] = `

  1 | b a { /* keep */ color: red; }
  2 | a { color: blue; }

`;

exports[`invalid(40): b a { /* keep */ color: red; }\na { color: blue; } 2`] = `

Message:
  1 | b a { /* keep */ color: red; }
> 2 | a { color: blue; }
    | ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`color\`.

`;

exports[`invalid(41): @media (width > 40rem) {\n\tb a { color: red; }\n}\n@media(width>40rem) {\n\ta { color: blue; }\n} 1`] = `

  1 | @media (width > 40rem) {
  2 | 	b a { color: red; }
  3 | }
  4 | @media(width>40rem) {
  5 | 	a { color: blue; }
  6 | }

`;

exports[`invalid(41): @media (width > 40rem) {\n\tb a { color: red; }\n}\n@media(width>40rem) {\n\ta { color: blue; }\n} 2`] = `

Message:
  1 | @media (width > 40rem) {
  2 | 	b a { color: red; }
  3 | }
  4 | @media(width>40rem) {
> 5 | 	a { color: blue; }
    | 	^ Expected selector \`a\` to come before \`b a\` on line 2 because both set \`color\`.
  6 | }

`;

exports[`invalid(42): b a { @media print { color: red; } } @media print { a { color: blue; } } 1`] = `

  1 | b a { @media print { color: red; } } @media print { a { color: blue; } }

`;

exports[`invalid(42): b a { @media print { color: red; } } @media print { a { color: blue; } } 2`] = `

Message:
> 1 | b a { @media print { color: red; } } @media print { a { color: blue; } }
    |                                                     ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`color\`.

`;

exports[`invalid(43): @supports (display: grid) {\n\tb a { color: red; }\n}\n@supports(display:grid) {\n\ta { color: blue; }\n} 1`] = `

  1 | @supports (display: grid) {
  2 | 	b a { color: red; }
  3 | }
  4 | @supports(display:grid) {
  5 | 	a { color: blue; }
  6 | }

`;

exports[`invalid(43): @supports (display: grid) {\n\tb a { color: red; }\n}\n@supports(display:grid) {\n\ta { color: blue; }\n} 2`] = `

Message:
  1 | @supports (display: grid) {
  2 | 	b a { color: red; }
  3 | }
  4 | @supports(display:grid) {
> 5 | 	a { color: blue; }
    | 	^ Expected selector \`a\` to come before \`b a\` on line 2 because both set \`color\`.
  6 | }

`;

exports[`invalid(44): @media print {\n\t@supports (display: grid) {\n\t\tb a { color: red; }\n\t}\n}\n@media print {\n\t@supports(display:grid) {\n\t\ta { color: blue; }\n\t}\n} 1`] = `

   1 | @media print {
   2 | 	@supports (display: grid) {
   3 | 		b a { color: red; }
   4 | 	}
   5 | }
   6 | @media print {
   7 | 	@supports(display:grid) {
   8 | 		a { color: blue; }
   9 | 	}
  10 | }

`;

exports[`invalid(44): @media print {\n\t@supports (display: grid) {\n\t\tb a { color: red; }\n\t}\n}\n@media print {\n\t@supports(display:grid) {\n\t\ta { color: blue; }\n\t}\n} 2`] = `

Message:
   1 | @media print {
   2 | 	@supports (display: grid) {
   3 | 		b a { color: red; }
   4 | 	}
   5 | }
   6 | @media print {
   7 | 	@supports(display:grid) {
>  8 | 		a { color: blue; }
     | 		^ Expected selector \`a\` to come before \`b a\` on line 3 because both set \`color\`.
   9 | 	}
  10 | }

`;

exports[`invalid(45): @layer theme {\n\tb a { color: red; }\n}\n@layer theme {\n\ta { color: blue; }\n} 1`] = `

  1 | @layer theme {
  2 | 	b a { color: red; }
  3 | }
  4 | @layer theme {
  5 | 	a { color: blue; }
  6 | }

`;

exports[`invalid(45): @layer theme {\n\tb a { color: red; }\n}\n@layer theme {\n\ta { color: blue; }\n} 2`] = `

Message:
  1 | @layer theme {
  2 | 	b a { color: red; }
  3 | }
  4 | @layer theme {
> 5 | 	a { color: blue; }
    | 	^ Expected selector \`a\` to come before \`b a\` on line 2 because both set \`color\`.
  6 | }

`;

exports[`invalid(46): @layer {\n\tb a { color: red; }\n\ta { color: blue; }\n} 1`] = `

  1 | @layer {
  2 | 	b a { color: red; }
  3 | 	a { color: blue; }
  4 | }

`;

exports[`invalid(46): @layer {\n\tb a { color: red; }\n\ta { color: blue; }\n} 2`] = `

Message:
  1 | @layer {
  2 | 	b a { color: red; }
> 3 | 	a { color: blue; }
    | 	^ Expected selector \`a\` to come before \`b a\` on line 2 because both set \`color\`.
  4 | }

`;

exports[`invalid(47): @container narrow (width < 20rem) {\n\tb a { color: red; }\n}\n@container   narrow   (width < 20rem) {\n\ta { color: blue; }\n} 1`] = `

  1 | @container narrow (width < 20rem) {
  2 | 	b a { color: red; }
  3 | }
  4 | @container   narrow   (width < 20rem) {
  5 | 	a { color: blue; }
  6 | }

`;

exports[`invalid(47): @container narrow (width < 20rem) {\n\tb a { color: red; }\n}\n@container   narrow   (width < 20rem) {\n\ta { color: blue; }\n} 2`] = `

Message:
  1 | @container narrow (width < 20rem) {
  2 | 	b a { color: red; }
  3 | }
  4 | @container   narrow   (width < 20rem) {
> 5 | 	a { color: blue; }
    | 	^ Expected selector \`a\` to come before \`b a\` on line 2 because both set \`color\`.
  6 | }

`;

exports[`invalid(48): @scope (.page) {\n\tb a { color: red; }\n}\n@scope(.page) {\n\ta { color: blue; }\n} 1`] = `

  1 | @scope (.page) {
  2 | 	b a { color: red; }
  3 | }
  4 | @scope(.page) {
  5 | 	a { color: blue; }
  6 | }

`;

exports[`invalid(48): @scope (.page) {\n\tb a { color: red; }\n}\n@scope(.page) {\n\ta { color: blue; }\n} 2`] = `

Message:
  1 | @scope (.page) {
  2 | 	b a { color: red; }
  3 | }
  4 | @scope(.page) {
> 5 | 	a { color: blue; }
    | 	^ Expected selector \`a\` to come before \`b a\` on line 2 because both set \`color\`.
  6 | }

`;

exports[`invalid(49): @scope (.page) { > b a { color: red; } a { color: blue; } } 1`] = `

  1 | @scope (.page) { > b a { color: red; } a { color: blue; } }

`;

exports[`invalid(49): @scope (.page) { > b a { color: red; } a { color: blue; } } 2`] = `

Message:
> 1 | @scope (.page) { > b a { color: red; } a { color: blue; } }
    |                                        ^ Expected selector \`a\` to come before \`>b a\` on line 1 because both set \`color\`.

`;

exports[`invalid(5): b a { color: red !important; } a { color: blue; } 1`] = `

  1 | b a { color: red !important; } a { color: blue; }

`;

exports[`invalid(5): b a { color: red !important; } a { color: blue; } 2`] = `

Message:
> 1 | b a { color: red !important; } a { color: blue; }
    |                                ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`color\`.

`;

exports[`invalid(50): @starting-style {\n\tb a { color: red; }\n}\n@starting-style {\n\ta { color: blue; }\n} 1`] = `

  1 | @starting-style {
  2 | 	b a { color: red; }
  3 | }
  4 | @starting-style {
  5 | 	a { color: blue; }
  6 | }

`;

exports[`invalid(50): @starting-style {\n\tb a { color: red; }\n}\n@starting-style {\n\ta { color: blue; }\n} 2`] = `

Message:
  1 | @starting-style {
  2 | 	b a { color: red; }
  3 | }
  4 | @starting-style {
> 5 | 	a { color: blue; }
    | 	^ Expected selector \`a\` to come before \`b a\` on line 2 because both set \`color\`.
  6 | }

`;

exports[`invalid(51): @unknown feature {\n\tb a { color: red; }\n}\n@unknown feature {\n\ta { color: blue; }\n} 1`] = `

  1 | @unknown feature {
  2 | 	b a { color: red; }
  3 | }
  4 | @unknown feature {
  5 | 	a { color: blue; }
  6 | }

`;

exports[`invalid(51): @unknown feature {\n\tb a { color: red; }\n}\n@unknown feature {\n\ta { color: blue; }\n} 2`] = `

Message:
  1 | @unknown feature {
  2 | 	b a { color: red; }
  3 | }
  4 | @unknown feature {
> 5 | 	a { color: blue; }
    | 	^ Expected selector \`a\` to come before \`b a\` on line 2 because both set \`color\`.
  6 | }

`;

exports[`invalid(52): a { & > b { color: red; } } b { color: blue; } 1`] = `

  1 | a { & > b { color: red; } } b { color: blue; }

`;

exports[`invalid(52): a { & > b { color: red; } } b { color: blue; } 2`] = `

Message:
> 1 | a { & > b { color: red; } } b { color: blue; }
    |                             ^ Expected selector \`b\` to come before \`a>b\` on line 1 because both set \`color\`.

`;

exports[`invalid(53): a { b { color: red; } } b { color: blue; } 1`] = `

  1 | a { b { color: red; } } b { color: blue; }

`;

exports[`invalid(53): a { b { color: red; } } b { color: blue; } 2`] = `

Message:
> 1 | a { b { color: red; } } b { color: blue; }
    |                         ^ Expected selector \`b\` to come before \`a b\` on line 1 because both set \`color\`.

`;

exports[`invalid(54): #dialog, .dialog { & a { color: red; } } a { color: blue; } 1`] = `

  1 | #dialog, .dialog { & a { color: red; } } a { color: blue; }

`;

exports[`invalid(54): #dialog, .dialog { & a { color: red; } } a { color: blue; } 2`] = `

Message:
> 1 | #dialog, .dialog { & a { color: red; } } a { color: blue; }
    |                                          ^ Expected selector \`a\` to come before \`:is(#dialog, .dialog) a\` on line 1 because both set \`color\`.

`;

exports[`invalid(55): #dialog, .dialog { && { color: red; } } .dialog.dialog { color: blue; } 1`] = `

  1 | #dialog, .dialog { && { color: red; } } .dialog.dialog { color: blue; }

`;

exports[`invalid(55): #dialog, .dialog { && { color: red; } } .dialog.dialog { color: blue; } 2`] = `

Message:
> 1 | #dialog, .dialog { && { color: red; } } .dialog.dialog { color: blue; }
    |                                         ^^^^^^^^^^^^^^ Expected selector \`.dialog.dialog\` to come before \`:is(#dialog, .dialog):is(#dialog, .dialog)\` on line 1 because both set \`color\`.

`;

exports[`invalid(56): .dialog:hover { & { color: red; } } .dialog { color: blue; } 1`] = `

  1 | .dialog:hover { & { color: red; } } .dialog { color: blue; }

`;

exports[`invalid(56): .dialog:hover { & { color: red; } } .dialog { color: blue; } 2`] = `

Message:
> 1 | .dialog:hover { & { color: red; } } .dialog { color: blue; }
    |                                     ^^^^^^^ Expected selector \`.dialog\` to come before \`.dialog:hover\` on line 1 because both set \`color\`.

`;

exports[`invalid(57): a { color: red; b & { color: blue; } color: green; } 1`] = `

  1 | a { color: red; b & { color: blue; } color: green; }

`;

exports[`invalid(57): a { color: red; b & { color: blue; } color: green; } 2`] = `

Message:
> 1 | a { color: red; b & { color: blue; } color: green; }
    | ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`color\`.

`;

exports[`invalid(58): a { color: red !important; b & { color: blue !important; } color: green !important; } 1`] = `

  1 | a { color: red !important; b & { color: blue !important; } color: green !important; }

`;

exports[`invalid(58): a { color: red !important; b & { color: blue !important; } color: green !important; } 2`] = `

Message:
> 1 | a { color: red !important; b & { color: blue !important; } color: green !important; }
    | ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`color\`.

`;

exports[`invalid(59): b a:before { color: red; } a::before { color: blue; } 1`] = `

  1 | b a:before { color: red; } a::before { color: blue; }

`;

exports[`invalid(59): b a:before { color: red; } a::before { color: blue; } 2`] = `

Message:
> 1 | b a:before { color: red; } a::before { color: blue; }
    |                            ^^^^^^^^^ Expected selector \`a::before\` to come before \`b a:before\` on line 1 because both set \`color\`.

`;

exports[`invalid(6): b a { color: red !important; } a { color: blue !important; } 1`] = `

  1 | b a { color: red !important; } a { color: blue !important; }

`;

exports[`invalid(6): b a { color: red !important; } a { color: blue !important; } 2`] = `

Message:
> 1 | b a { color: red !important; } a { color: blue !important; }
    |                                ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`color\`.

`;

exports[`invalid(60): b a::before { color: red; } a:before { color: blue; } 1`] = `

  1 | b a::before { color: red; } a:before { color: blue; }

`;

exports[`invalid(60): b a::before { color: red; } a:before { color: blue; } 2`] = `

Message:
> 1 | b a::before { color: red; } a:before { color: blue; }
    |                             ^^^^^^^^ Expected selector \`a:before\` to come before \`b a::before\` on line 1 because both set \`color\`.

`;

exports[`invalid(61): b a { @unknown feature { color: red; } } a { @unknown feature { color: blue; } } 1`] = `

  1 | b a { @unknown feature { color: red; } } a { @unknown feature { color: blue; } }

`;

exports[`invalid(61): b a { @unknown feature { color: red; } } a { @unknown feature { color: blue; } } 2`] = `

Message:
> 1 | b a { @unknown feature { color: red; } } a { @unknown feature { color: blue; } }
    |                                          ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`color\`.

`;

exports[`invalid(62): .card {\n\t@media (width > 40rem) {\n\t\t&:hover { color: red; }\n\t}\n}\n@media (width > 40rem) {\n\t.card { color: blue; }\n} 1`] = `

  1 | .card {
  2 | 	@media (width > 40rem) {
  3 | 		&:hover { color: red; }
  4 | 	}
  5 | }
  6 | @media (width > 40rem) {
  7 | 	.card { color: blue; }
  8 | }

`;

exports[`invalid(62): .card {\n\t@media (width > 40rem) {\n\t\t&:hover { color: red; }\n\t}\n}\n@media (width > 40rem) {\n\t.card { color: blue; }\n} 2`] = `

Message:
  1 | .card {
  2 | 	@media (width > 40rem) {
  3 | 		&:hover { color: red; }
  4 | 	}
  5 | }
  6 | @media (width > 40rem) {
> 7 | 	.card { color: blue; }
    | 	^^^^^ Expected selector \`.card\` to come before \`.card:hover\` on line 3 because both set \`color\`.
  8 | }

`;

exports[`invalid(63): :is(b, c) a { color: red; } a { color: blue; } 1`] = `

  1 | :is(b, c) a { color: red; } a { color: blue; }

`;

exports[`invalid(63): :is(b, c) a { color: red; } a { color: blue; } 2`] = `

Message:
> 1 | :is(b, c) a { color: red; } a { color: blue; }
    |                             ^ Expected selector \`a\` to come before \`:is(b,c) a\` on line 1 because both set \`color\`.

`;

exports[`invalid(64): b > a { color: red; } a { color: blue; } 1`] = `

  1 | b > a { color: red; } a { color: blue; }

`;

exports[`invalid(64): b > a { color: red; } a { color: blue; } 2`] = `

Message:
> 1 | b > a { color: red; } a { color: blue; }
    |                       ^ Expected selector \`a\` to come before \`b>a\` on line 1 because both set \`color\`.

`;

exports[`invalid(65): b a { color: red; } a { color: blue; } a { color: green; } 1`] = `

  1 | b a { color: red; } a { color: blue; } a { color: green; }

`;

exports[`invalid(65): b a { color: red; } a { color: blue; } a { color: green; } 2`] = `

Message:
> 1 | b a { color: red; } a { color: blue; } a { color: green; }
    |                     ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`color\`.

`;

exports[`invalid(65): b a { color: red; } a { color: blue; } a { color: green; } 3`] = `

Message:
> 1 | b a { color: red; } a { color: blue; } a { color: green; }
    |                                        ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`color\`.

`;

exports[`invalid(7): b a { color: red !important; } a { color: blue; color: green !important; } 1`] = `

  1 | b a { color: red !important; } a { color: blue; color: green !important; }

`;

exports[`invalid(7): b a { color: red !important; } a { color: blue; color: green !important; } 2`] = `

Message:
> 1 | b a { color: red !important; } a { color: blue; color: green !important; }
    |                                ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`color\`.

`;

exports[`invalid(8): b a { color: red; background: white; } a { color: blue !important; background: black; } 1`] = `

  1 | b a { color: red; background: white; } a { color: blue !important; background: black; }

`;

exports[`invalid(8): b a { color: red; background: white; } a { color: blue !important; background: black; } 2`] = `

Message:
> 1 | b a { color: red; background: white; } a { color: blue !important; background: black; }
    |                                        ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`background\`.

`;

exports[`invalid(9): b a { COLOR: red; } a { color: blue; } 1`] = `

  1 | b a { COLOR: red; } a { color: blue; }

`;

exports[`invalid(9): b a { COLOR: red; } a { color: blue; } 2`] = `

Message:
> 1 | b a { COLOR: red; } a { color: blue; }
    |                     ^ Expected selector \`a\` to come before \`b a\` on line 1 because both set \`color\`.

`;
